welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:4: error: not found: value num
  if (num(1)>max1) {
      ^max2Value:8: error: not found: value length
  for (i <- 2 to length-1) {
                 ^